# badgebadger-print-agent

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: job-tracking-protocol.md
scripts/: fetch-sumatra.ps1  fetch-sumatra.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/: .gitignore  SumatraPDF-LICENSE.txt  SumatraPDF-NOTICE.txt
src-tauri/src/: auth.rs  cloud_dispatch.rs  http_server.rs  lib.rs  main.rs  printer.rs  rate_limit.rs
src/components/: ActivityCard.tsx  AutostartCallout.tsx  ChecklistCard.tsx  PairingCard.tsx  PrinterCard.tsx  SettingsCard.tsx  StatusHero.tsx  Toaster.tsx  UpdateBanner.tsx  icons.tsx
