[package]
name = "badgebadger-print-agent"
version = "0.4.0"
description = "BadgeBadger Print Agent — listens for print jobs from the BadgeBadger web app and dispatches them to the local OS printer."
authors = ["BadgeBadger"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "badgebadger_print_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
anyhow = "1"
once_cell = "1"
getrandom = "0.2"
hostname = "0.4"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Printing",
  "Win32_Security",
  "Win32_Storage_Xps",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
